added iron router post

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -19,3 +19,13 @@
 code {
   background: #eef;
 }
+
+.post-chrono-title {
+  padding-left: 20px;
+}
+
+.post-chrono-row {
+  padding-bottom: 10px;
+  padding-left: 100px;
+  font-size: 20px;
+}
