--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <ul class="menu">
             <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
             <li class="menu__entry"><a href="{{ '/table-of-content' | prepend: site.baseurl }}">Table Of Content</a></li>
+            <li class="menu__entry"><a href="{{ '/chronological-list' | prepend: site.baseurl }}">Chronological</a></li>
             <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
         </ul>
     </div>
