--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,10 @@
         <a href="/" class="logo">{{ site.title }}</a>
 
         <ul class="menu">
-            <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
             <li class="menu__entry"><a href="{{ '/table-of-content' | prepend: site.baseurl }}">Table Of Content</a></li>
             <li class="menu__entry"><a href="{{ '/chronological-list' | prepend: site.baseurl }}">Chronological</a></li>
-            <li class="menu__entry"><a href="{{ '/' | prepend: site.baseurl }}">Blog</a></li>
+            <li class="menu__entry"><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
         </ul>
     </div>
 
@@ -20,6 +20,12 @@
         {% if site.author.twitter %}
             <a href="https://twitter.com/{{ site.author.twitter }}" class="social-links__entry" target="_blank">
                 <i class="fa fa-twitter"></i>
+            </a>
+        {% endif %}
+
+        {% if site.author.linkedin %}
+            <a href="https://nz.linkedin.com/in/{{ site.author.linkedin }}" class="social-links__entry" target="_blank">
+                <i class="fa fa-linkedin"></i>
             </a>
         {% endif %}
     </ul>
